--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+img {
+  max-width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+  padding: 10px;
+  max-width: 750px;
+  margin: 0 auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+header a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+header nav {
+  display: flex;
+  gap: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post {
+  display: grid;
+  grid-template-columns: 0.8fr 1.2fr;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.texts h2 {
+  margin: 0;
+  font-size: 1.4rem;
+}
+
+.post .info {
+  color: gray;
+  margin-top: 2px;
+  display: flex;
+  gap: 10px;
+  font-size: 0.7rem;
+  font-weight: bold;
+}
+.author {
+  text-decoration: none;
+  color: #333;
+}
+.summary {
+  line-height: 1.5rem;
+  font-size: 0.9rem;
+  margin: 5px 0;
 }
