--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 img {
   max-width: 100%;
 }
@@ -53,4 +57,26 @@ header nav {
   line-height: 1.5rem;
   font-size: 0.9rem;
   margin: 5px 0;
+}
+
+form.login,
+form.register {
+  max-width: 300px;
+  margin: auto;
+}
+
+input {
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+  border: 0;
+  background-color: #e9e9e9;
+  padding: 7px 10px;
+  border-radius: 10px;
+  border-bottom: 1px solid rgb(184, 184, 184);
+  /* box-shadow: 1px 2px 3px rgba(128, 128, 128, 0.219); */
+}
+
+form h1 {
+  text-align: center;
 }
